feat!: BREAKING CHANGE - add a maxFiles property to limit files (#267)