@@ -1,6 +1,6 @@
 package io.kestra.plugin.fs.nfs;
 
-import com.fasterxml.jackson.databind.ObjectMapper; 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import io.kestra.core.junit.annotations.KestraTest;
 import io.kestra.core.models.conditions.ConditionContext;
 import io.kestra.core.models.executions.Execution;
@@ -32,7 +32,7 @@ class TriggerTest {
 
     @Inject
     private RunContextFactory runContextFactory;
-    
+
     private static final ObjectMapper objectMapper = JacksonMapper.ofJson();
 
     @TempDir
@@ -64,15 +64,15 @@ class TriggerTest {
 
         Optional<Execution> execution = nfsTrigger.evaluate(context.getKey(), context.getValue());
         assertThat(execution.isPresent(), is(true));
-        
+
         List<Map<String, Object>> rawFiles = (List<Map<String, Object>>) execution.get().getTrigger().getVariables().get("files");
         List<io.kestra.plugin.fs.nfs.Trigger.TriggeredFile> files = rawFiles.stream()
             .map(map -> objectMapper.convertValue(map, io.kestra.plugin.fs.nfs.Trigger.TriggeredFile.class))
-            .collect(Collectors.toList());
-            
+            .toList();
+
         assertThat(files.size(), is(1));
-        assertThat(files.get(0).getFile().getName(), is("file.txt"));
-        assertThat(files.get(0).getChangeType(), is(io.kestra.plugin.fs.nfs.Trigger.ChangeType.CREATE));
+        assertThat(files.getFirst().getFile().getName(), is("file.txt"));
+        assertThat(files.getFirst().getChangeType(), is(io.kestra.plugin.fs.nfs.Trigger.ChangeType.CREATE));
 
         Optional<Execution> repeatedExecution = nfsTrigger.evaluate(context.getKey(), context.getValue());
         assertThat(repeatedExecution.isEmpty(), is(true));
@@ -86,14 +86,14 @@ class TriggerTest {
         Files.writeString(newFile2, "log content");
         Optional<Execution> secondCreateExecution = nfsTrigger.evaluate(context.getKey(), context.getValue());
         assertThat(secondCreateExecution.isPresent(), is(true));
-        
+
         List<Map<String, Object>> secondRawFiles = (List<Map<String, Object>>) secondCreateExecution.get().getTrigger().getVariables().get("files");
         List<io.kestra.plugin.fs.nfs.Trigger.TriggeredFile> secondFiles = secondRawFiles.stream()
             .map(map -> objectMapper.convertValue(map, io.kestra.plugin.fs.nfs.Trigger.TriggeredFile.class))
-            .collect(Collectors.toList());
-            
+            .toList();
+
         assertThat(secondFiles.size(), is(1));
-        assertThat(secondFiles.get(0).getFile().getName(), is("file2.log"));
+        assertThat(secondFiles.getFirst().getFile().getName(), is("file2.log"));
     }
 
     @Test
@@ -112,7 +112,7 @@ class TriggerTest {
 
         Optional<Execution> initialExecution = nfsTrigger.evaluate(context.getKey(), context.getValue());
         assertThat(initialExecution.isEmpty(), is(true));
-        
+
         Optional<Execution> noChangeExecution = nfsTrigger.evaluate(context.getKey(), context.getValue());
         assertThat(noChangeExecution.isEmpty(), is(true));
 
@@ -126,11 +126,11 @@ class TriggerTest {
         List<Map<String, Object>> rawFiles = (List<Map<String, Object>>) updateExecution.get().getTrigger().getVariables().get("files");
         List<io.kestra.plugin.fs.nfs.Trigger.TriggeredFile> files = rawFiles.stream()
             .map(map -> objectMapper.convertValue(map, io.kestra.plugin.fs.nfs.Trigger.TriggeredFile.class))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(files.size(), is(1));
-        assertThat(files.get(0).getFile().getName(), is("file.txt"));
-        assertThat(files.get(0).getChangeType(), is(io.kestra.plugin.fs.nfs.Trigger.ChangeType.UPDATE));
+        assertThat(files.getFirst().getFile().getName(), is("file.txt"));
+        assertThat(files.getFirst().getChangeType(), is(io.kestra.plugin.fs.nfs.Trigger.ChangeType.UPDATE));
 
         Optional<Execution> repeatedExecution = nfsTrigger.evaluate(context.getKey(), context.getValue());
         assertThat(repeatedExecution.isEmpty(), is(true));
@@ -159,14 +159,14 @@ class TriggerTest {
         List<Map<String, Object>> createRawFiles = (List<Map<String, Object>>) createExecution.get().getTrigger().getVariables().get("files");
         List<io.kestra.plugin.fs.nfs.Trigger.TriggeredFile> createFiles = createRawFiles.stream()
             .map(map -> objectMapper.convertValue(map, io.kestra.plugin.fs.nfs.Trigger.TriggeredFile.class))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(createFiles.size(), is(1));
-        assertThat(createFiles.get(0).getChangeType(), is(io.kestra.plugin.fs.nfs.Trigger.ChangeType.CREATE));
+        assertThat(createFiles.getFirst().getChangeType(), is(io.kestra.plugin.fs.nfs.Trigger.ChangeType.CREATE));
 
         Optional<Execution> repeatedExecution = nfsTrigger.evaluate(context.getKey(), context.getValue());
         assertThat(repeatedExecution.isEmpty(), is(true));
-        
+
         Thread.sleep(1000);
         Files.writeString(newFile, "new content");
         Thread.sleep(500);
@@ -177,9 +177,28 @@ class TriggerTest {
         List<Map<String, Object>> updateRawFiles = (List<Map<String, Object>>) updateExecution.get().getTrigger().getVariables().get("files");
         List<io.kestra.plugin.fs.nfs.Trigger.TriggeredFile> updateFiles = updateRawFiles.stream()
             .map(map -> objectMapper.convertValue(map, io.kestra.plugin.fs.nfs.Trigger.TriggeredFile.class))
-            .collect(Collectors.toList());
+            .toList();
 
         assertThat(updateFiles.size(), is(1));
-        assertThat(updateFiles.get(0).getChangeType(), is(io.kestra.plugin.fs.nfs.Trigger.ChangeType.UPDATE));
+        assertThat(updateFiles.getFirst().getChangeType(), is(io.kestra.plugin.fs.nfs.Trigger.ChangeType.UPDATE));
+    }
+
+    @Test
+    void trigger_maxFiles_should_skip_execution() throws Exception {
+        Files.writeString(nfsMountPoint.resolve("file1.txt"), "content1");
+        Files.writeString(nfsMountPoint.resolve("file2.txt"), "content2");
+
+        io.kestra.plugin.fs.nfs.Trigger nfsTrigger = io.kestra.plugin.fs.nfs.Trigger.builder()
+            .id(IdUtils.create())
+            .type(io.kestra.plugin.fs.nfs.Trigger.class.getName())
+            .from(Property.ofValue(nfsMountPoint.toString()))
+            .on(Property.ofValue(StatefulTriggerInterface.On.CREATE))
+            .maxFiles(Property.ofValue(1))
+            .build();
+
+        Map.Entry<ConditionContext, Trigger> context = TestsUtils.mockTrigger(runContextFactory, nfsTrigger);
+
+        Optional<Execution> execution = nfsTrigger.evaluate(context.getKey(), context.getValue());
+        assertThat(execution.isEmpty(), is(true));
     }
 }
